ECA-1890: I removed the unexceptional exception tossing from AuthorizationSessionBean and refactored affected classes to match. To handle exception throwing (when proper), I created a stopgap method in Authorizer. I also fixed a couple of authorization bugs, removed warnings and added a couple of tests.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10358 37aeb1de-b14b-0410-9a0e-82b28170d228